Nav on mobiles fixed

--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -45,7 +45,6 @@ html {
   justify-content: flex-end;
   width: 100%;
   height: 15vh;
-  min-height: 40%;
 }
 
 .nav {
@@ -202,18 +201,24 @@ main {
 
   .nav-menu.open {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
   }
 
   .nav-menu {
     display: none;
     flex-direction: column;
-    align-items: center;
+    align-items: flex;
     position: fixed;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.64);
     width: 100%;
     z-index: 1;
+    justify-content: flex-start;
   }
 
   main {
